updated css themes and gamecode

--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
 </head>
 <body>
   
+  <header></header>
+
   <div class="gameboard">
-    <div id="cell1">1</div>
-    <div id="cell2">2</div>
-    <div id="cell3">3</div>
-    <div id="cell4"=>4</div>
-    <div id="cell5"=>5</div>
-    <div id="cell6"=>6</div>
-    <div id="cell7"=>7</div>
-    <div id="cell8"=>8</div>
-    <div id="cell9"=>9</div>
+    <div id="cell1"></div>
+    <div id="cell2"></div>
+    <div id="cell3"></div>
+    <div id="cell4"></div>
+    <div id="cell5"></div>
+    <div id="cell6"></div>
+    <div id="cell7"></div>
+    <div id="cell8"></div>
+    <div id="cell9"></div>
   </div>
 
-  <!-- <div class="players">
-    <div class="player1"></div>
-    <div class="player2"></div>
-  </div> -->
+  <footer>
+    <div class="player1">Player 1</div>
+    <div class="winner">Winner</div>
+    <div class="player2">Player 2</div>
+  </footer>
 
   <script src="app.js"></script>
 </body>
