updated game win conditions, draws and reset

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <title>Tic-Tac-Toe</title>
 </head>
 <body>
   
-  <header></header>
+  <header><img src="Images/tic-tac-toe-title.png" alt=""><header>
 
   <div class="gameboard">
     <div id="cell1"></div>
@@ -24,11 +25,17 @@
   </div>
 
   <footer>
-    <div class="player1">Player 1</div>
-    <div class="winner">Winner</div>
-    <div class="player2">Player 2</div>
+    <div class="player1">1</div>
+    <div class="winner">
+      
+      <!-- <img id="red-toad-wins" src="Images/red-toad-wins.png" alt=""> -->
+      <!-- <img id="blue-toad-wins" src="Images/blue-toad-wins.png" alt=""> -->
+    </div>
+    <div class="player2">2</div>
   </footer>
 
+  <button id="reset-btn">PLAY AGAIN</button>
+  
   <script src="app.js"></script>
 </body>
 </html>
