winner messages and double click titles fixed

--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
     <div class="player1">1</div>
     <div class="winner">
       
-      <!-- <img id="red-toad-wins" src="Images/red-toad-wins.png" alt=""> -->
-      <!-- <img id="blue-toad-wins" src="Images/blue-toad-wins.png" alt=""> -->
+      <img id="red-toad-wins" class="hide" src="Images/red-toad-wins.png" alt="">
+      <img id="blue-toad-wins" class="hide" src="Images/blue-toad-wins.png" alt="">
+      <img id="draw-game" class="hide" src="Images/draw.png" alt="">
+
     </div>
     <div class="player2">2</div>
   </footer>
 
   <button id="reset-btn">PLAY AGAIN</button>
-  
+
   <script src="app.js"></script>
 </body>
 </html>
