actually fixed draw game bug

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="player2">2</div>
   </footer>
 
-  <button id="reset-btn">PLAY AGAIN</button>
+  <button id="reset-btn" class="hide">PLAY AGAIN</button>
 
   <script src="app.js"></script>
 </body>
