--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <title>Tic-Tac-Toe</title>
+  <title>Tic-Tac-Toad</title>
 </head>
 <body>
   
-  <header><img src="Images/tic-tac-toe-title.png" alt=""><header>
+  <header><img src="Images/tic-tac-toad-title-green.png" alt=""></header>
 
   <div class="gameboard">
     <div id="cell1"></div>
@@ -22,21 +22,23 @@
     <div id="cell7"></div>
     <div id="cell8"></div>
     <div id="cell9"></div>
+    <!-- <img class="toad-legs" src="Images/youre-a-winner-toad-legs.jpeg" alt=""> -->
   </div>
 
   <footer>
-    <div class="player1">1</div>
+    <div class="player2"></div>
     <div class="winner">
       
       <img id="red-toad-wins" class="hide" src="Images/red-toad-wins.png" alt="">
       <img id="blue-toad-wins" class="hide" src="Images/blue-toad-wins.png" alt="">
+
       <img id="draw-game" class="hide" src="Images/draw.png" alt="">
 
     </div>
-    <div class="player2">2</div>
+    <div class="player1"></div>
   </footer>
 
-  <button id="reset-btn" class="hide">PLAY AGAIN</button>
+  <button id="reset-btn" class="hide">PLAY AGAIN?</button>
 
   <script src="app.js"></script>
 </body>
