--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   <title>Tic-Tac-Toad</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
   </div>
 
   <footer>
-    <div class="player2"></div>
+    <div class="bluePlayer"></div>
     <div class="winner">
       
       <img id="red-toad-wins" class="hide" src="Images/red-toad-wins.png" alt="">
@@ -35,7 +35,7 @@
       <img id="draw-game" class="hide" src="Images/draw.png" alt="">
 
     </div>
-    <div class="player1"></div>
+    <div class="redPlayer"></div>
   </footer>
 
   <button id="reset-btn" class="hide">PLAY AGAIN?</button>
